fixing card spacing

--- a/css/about.css
+++ b/css/about.css
@@ -1,5 +1,6 @@
 #peopleGrid {
     display: flex;
+    justify-content: space-around;
 }
 
 #peopleCard {
